fix: border-radius

--- a/styles.css
+++ b/styles.css
@@ -126,5 +126,6 @@ button {
   img {
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
+    border-top-right-radius: 0px;
   }
 }
